# library_manager

./: CMakeLists.txt  README.md  README_TESTING.md
include/cli/: cli.h
include/core/: author.h  book.h  genre.h  library.h
include/utils/: log.h
src/: main.c
src/cli/: cli.c
src/core/: author.c  book.c  genre.c  library.c
src/utils/: log.c
tests/: CMakeLists.txt  test_author.cpp  test_book.cpp  test_genre.cpp  test_library.cpp
